--- a/_config.yml
+++ b/_config.yml
@@ -85,7 +85,7 @@ author:
   bio              : "I want to enable ... ..."
   employer         :
   pubmed           : #"https://www.ncbi.nlm.nih.gov/pubmed/?term=john+snow"
-  googlescholar    : "https://scholar.google.com/citations?hl=en&user=qoeylgEAAAAJ&view_op=list_works&sortby=pubdate"
+  googlescholar    : "https://imrul-pinak.github.io/"
   DBLP             : "https://dblp.uni-trier.de/pers/hd/n/Nayeem:Mir_Tafseer"
   email            :   imrul.pinak@gmail.com
   researchgate     :  # example: "https://www.researchgate.net/profile/yourprofile"
